[package]
name = "ttmap"
version = "0.1.2"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/type-map"
readme = "README.md"
description = "Trivial implementation of type map"
keywords = ["typemap", "type-map", "hashmap"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
indexmap = "1"
smart-ptr = { version = "0.4", features = ["alloc"] }
